--- a/index.html
+++ b/index.html
@@ -13,26 +13,30 @@
 	<h1>Palo Alto Coffee Shops with Wifi</h1>
 
 
-	<div class="col-xs-2">
-        <div id="search-container">
-            <form>
-                <input data-bind="textInput: searchInput" id="search" type="search" placeholder="filter your search here" autocomplete="off">
-            </form>
+	<div class="container">
+        <div class="row">
+            <div class="col-xs-4">
+                <div id="search-container">
+                    <form>
+                        <input data-bind="textInput: searchInput" id="search" type="search" placeholder="filter your search here" autocomplete="off">
+                    </form>
 
-            <ul data-bind="foreach: filteredLocations">
-            	<div>
-            		<li data-bind="click: $parent.triggerMarker">
-            			<button data-bind="text: title" type="button"></button>
-            		</li>
-            	</div>
-        	</ul>
+                    <ul data-bind="foreach: filteredLocations">
+                        <div>
+                            <li data-bind="click: $parent.triggerMarker">
+                                <button data-bind="text: title" type="button"></button>
+                            </li>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-xs-8">
+                <div id="map-canvas" class="map">
+                </div>
+            </div>
         </div>
-	</div>
-
-	<div class="col-xs-10">
-		<div id="map-canvas" class="map">
-		</div>
-	</div>
+    </div>
 
 
 
